[package]
name = "hoon"
version = "0.1.0"
edition.workspace = true

[dependencies]
hoonc.workspace = true
nockapp.workspace = true
nockvm.workspace = true
zkvm-jetpack.workspace = true
# Outside dependencies
clap.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true

[[bin]]
name = "hoon"
path = "src/main.rs"
